# AirQuality

./: README.md  pyproject.toml  sample_code.py  setup.py
air_quality_analyzer/: analyzer.py
doc/: documentation.md
tests/: test-air-quality.py
